dataset1235/2025-2/2868285114/users/2357405339/executions/3071719669_3836350213.log
== SUBMISSION (2025-08-28 22:27:12)
-- CODE: 
peso_gramas = float(input())
quantidade_em_gramas = float(input())

 setedias = quantidade_em_gramas*7
resto = peso__gramas/ setedias
print(round(resto,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1798.4
26.28
---- correct output:
1614.44
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
859.563
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
2987.43
14.00
---- correct output:
2889.43
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
2884.21
7.40
---- correct output:
2832.41
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
2452.8
21.49
---- correct output:
2302.37
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.563
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:31:29)
-- CODE: 
peso_gramas = float(input())
quantidade_em_gramas = float(input())

setedias = quantidade_em_gramas*7
resto = peso_gramas - setedias
print(round(resto,3))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1798.4
26.28
---- correct output:
1614.44
---- user output:
1614.44
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
859.563
---- user output:
859.563
-- TEST CASE 3:
---- input:
2987.43
14.00
---- correct output:
2889.43
---- user output:
2889.43
-- TEST CASE 4:
---- input:
2884.21
7.40
---- correct output:
2832.41
---- user output:
2832.41
-- TEST CASE 5:
---- input:
2452.8
21.49
---- correct output:
2302.37
---- user output:
2302.37
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.563
---- user output:
7859.563
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:21:06)
-- CODE: 
peso = float(input().strip())
diaria = float(input().strip())

restante = peso - 7 * diaria

print(f{restante:.3f}'')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1798.4
26.28
---- correct output:
1614.44
-- ERROR:
File "XXXX", line 6
    print(f{restante:.3f}'')
                      ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
859.563
-- ERROR:
File "XXXX", line 6
    print(f{restante:.3f}'')
                      ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
2987.43
14.00
---- correct output:
2889.43
-- ERROR:
File "XXXX", line 6
    print(f{restante:.3f}'')
                      ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
2884.21
7.40
---- correct output:
2832.41
-- ERROR:
File "XXXX", line 6
    print(f{restante:.3f}'')
                      ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
2452.8
21.49
---- correct output:
2302.37
-- ERROR:
File "XXXX", line 6
    print(f{restante:.3f}'')
                      ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.563
-- ERROR:
File "XXXX", line 6
    print(f{restante:.3f}'')
                      ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:27:27)
-- CODE: 
peso_gramas = float(input())
quantidade_em_gramas = float(input())

 setedias = quantidade_em_gramas*7
resto = peso__gramas/ setedias
print(round(resto,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1798.4
26.28
---- correct output:
1614.44
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
859.563
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
2987.43
14.00
---- correct output:
2889.43
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
2884.21
7.40
---- correct output:
2832.41
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
2452.8
21.49
---- correct output:
2302.37
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.563
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:30:02)
-- CODE: 
peso_gramas = float(input())
quantidade_em_gramas = float(input())

 setedias = quantidade_em_gramas*7
resto = peso_gramas/setedias
print(round(resto,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1798.4
26.28
---- correct output:
1614.44
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
859.563
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
2987.43
14.00
---- correct output:
2889.43
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
2884.21
7.40
---- correct output:
2832.41
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
2452.8
21.49
---- correct output:
2302.37
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.563
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:31:09)
-- CODE: 
peso_gramas = float(input())
quantidade_em_gramas = float(input())

setedias = quantidade_em_gramas*7
resto = peso_gramas/ setedias
print(round(resto,3))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1798.4
26.28
---- correct output:
1614.44
---- user output:
9.776
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
859.563
---- user output:
7.106
-- TEST CASE 3:
---- input:
2987.43
14.00
---- correct output:
2889.43
---- user output:
30.484
-- TEST CASE 4:
---- input:
2884.21
7.40
---- correct output:
2832.41
---- user output:
55.68
-- TEST CASE 5:
---- input:
2452.8
21.49
---- correct output:
2302.37
---- user output:
16.305
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.563
---- user output:
56.833
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:27:09)
-- CODE: 
peso_gramas = float(input())
quantidade_em_gramas = float(input())

 setedias = quantidade_em_gramas*7
resto = peso__gramas/ setedias
print(round(resto,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1798.4
26.28
---- correct output:
1614.44
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
859.563
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
2987.43
14.00
---- correct output:
2889.43
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
2884.21
7.40
---- correct output:
2832.41
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
2452.8
21.49
---- correct output:
2302.37
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.563
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:29:43)
-- CODE: 
peso_gramas = float(input())
quantidade_em_gramas = float(input())

 setedias = quantidade_em_gramas*7
resto = peso_gramas - setedias
print(round(resto,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1798.4
26.28
---- correct output:
1614.44
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
859.563
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
2987.43
14.00
---- correct output:
2889.43
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
2884.21
7.40
---- correct output:
2832.41
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
2452.8
21.49
---- correct output:
2302.37
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.563
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:21:31)
-- CODE: 
peso = float(input().strip())
diaria = float(input().strip())

restante = peso - 7 * diaria

print(f"{restante:.3f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1798.4
26.28
---- correct output:
1614.44
---- user output:
1614.440
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
859.563
---- user output:
859.563
-- TEST CASE 3:
---- input:
2987.43
14.00
---- correct output:
2889.43
---- user output:
2889.430
-- TEST CASE 4:
---- input:
2884.21
7.40
---- correct output:
2832.41
---- user output:
2832.410
-- TEST CASE 5:
---- input:
2452.8
21.49
---- correct output:
2302.37
---- user output:
2302.370
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.563
---- user output:
7859.563
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:29:58)
-- CODE: 
peso_gramas = float(input())
quantidade_em_gramas = float(input())

 setedias = quantidade_em_gramas*7
resto = peso_gramas/setedias
print(round(resto,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1798.4
26.28
---- correct output:
1614.44
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
859.563
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
2987.43
14.00
---- correct output:
2889.43
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
2884.21
7.40
---- correct output:
2832.41
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
2452.8
21.49
---- correct output:
2302.37
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.563
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:28:25)
-- CODE: 
peso_gramas = float(input())
quantidade_em_gramas = float(input())

 setedias = quantidade_em_gramas*7
resto = peso__gramas - setedias
print(round(resto,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1798.4
26.28
---- correct output:
1614.44
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
859.563
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
2987.43
14.00
---- correct output:
2889.43
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
2884.21
7.40
---- correct output:
2832.41
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
2452.8
21.49
---- correct output:
2302.37
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.563
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:29:59)
-- CODE: 
peso_gramas = float(input())
quantidade_em_gramas = float(input())

 setedias = quantidade_em_gramas*7
resto = peso_gramas/setedias
print(round(resto,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1798.4
26.28
---- correct output:
1614.44
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
859.563
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
2987.43
14.00
---- correct output:
2889.43
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
2884.21
7.40
---- correct output:
2832.41
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
2452.8
21.49
---- correct output:
2302.37
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.563
-- ERROR:
File "XXXX", line 4
    setedias = quantidade_em_gramas*7
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
